fix: disable preview features